Fix invalid memory use of "Current File" after undo & deleting data-blocks

Implement proper mechanisms to ensure the file list is recreated after undo,
data-blocks are removed, assets created/removed or file loading without UI.
This could be further improved (e.g. don't recreate it if no asset data-block
is affected by undo or deletion).

Addresses T82886 & T83242.